# macro_files

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: compiletest.rs  temp.rs
tests/ui/fail/: missing_colon.rs  missing_colon.stderr  missing_comma.rs  missing_comma.stderr  missing_comma_after_map.rs  missing_comma_after_map.stderr  missing_value.rs  missing_value.stderr  not_found.rs  not_found.stderr  parse_expr.rs  parse_expr.stderr  parse_key.rs  parse_key.stderr  unexpected_colon.rs  unexpected_colon.stderr  unexpected_comma.rs  unexpected_comma.stderr  unexpected_curly_bracket.rs  unexpected_curly_bracket.stderr
